Touched Up Dark Mode + Layout + Corrected Transaction Unsuccessful

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -67,6 +67,11 @@ button.logout-btn,
     color: var(--primary-color);
 }
 
+.mobile-logout:hover {
+    background-color: var(--primary-color);
+    color: white;
+}
+
 /* Common container styling for all sections */
 .paynow-section,
 .transaction-section,
@@ -121,6 +126,7 @@ header {
 
 .header-logo img {
     height: 40px;
+    margin-right: 15px;
 }
 
 .header-icons {
@@ -171,6 +177,7 @@ header {
     border-top: 1px solid #ddd;
     padding: 5px 0px;
     margin: 0 20%;
+    background-color: var(--header-background-color);
 }
 
 .header-bottom a {
@@ -224,63 +231,42 @@ header {
     background-color: var(--tertiary-color);
 }
 
-
-
 /* Media query for mobile view */
 @media (max-width: 768px) {
     .header-top {
-        padding: 10 10%;
+        padding: 10px 5%;
         display: flex;
-        /* Ensure flex display */
         justify-content: space-between;
-        /* Space between elements */
         align-items: center;
-        /* Center items vertically */
     }
 
     .hamburger-menu {
         display: block;
-        /* Show hamburger menu on smaller screens */
     }
 
     .header-icons {
         display: flex;
-        /* Show icons in mobile view */
         flex-direction: row;
-        /* Align icons horizontally */
         justify-content: center;
-        /* Center the icons in the header */
         align-items: center;
-        /* Center items vertically */
-
         margin: 0 auto;
-        /* Center the header-icons */
         gap: 15px;
-        /* Add space between icons */
     }
 
     .header-welcome {
         display: none;
-        /* Hide the welcome message in mobile view */
     }
 
     .header-bottom {
         display: none;
-        /* Hide bottom row in mobile view */
     }
 
-    /* Style the logout button */
     .header-icons .logout-btn {
         height: 40px;
-        /* Set a smaller height */
         padding: 5px 10px;
-        /* Reduce padding */
         font-size: 14px;
-        /* Adjust font size */
         line-height: normal;
-        /* Maintain normal line height */
         margin: 0;
-        /* Remove any margins */
     }
 }
 
@@ -290,8 +276,8 @@ header {
     margin: 0;
     border-radius: 5px;
     font-size: 16px;
-    position: relative; 
-    width: 100%; 
+    position: relative;
+    width: 100%;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     display: none;
@@ -302,6 +288,7 @@ header {
     color: white;
     border: 1px solid #14A44D;
     margin-top: 20px;
+    z-index: 999;
 }
 
 .error {
@@ -452,7 +439,11 @@ header {
     border-radius: 15px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    margin-bottom: 50px;
+    /* margin-bottom: 100px; */
+}
+
+#myaccounts-mbottom {
+    margin-bottom: 100px;
 }
 
 .account-header {
@@ -505,10 +496,16 @@ header {
     align-items: center;
     border-bottom: 1px solid #eee;
     cursor: pointer;
+    background-color: var(--container-color);
 }
 
 .account-item:hover {
-    background-color: #f8f9fa;
+    background-color: var(--sub-header);
+    color: white;
+}
+
+.account-item:hover p, .account-item:hover h4 {
+    color: white;
 }
 
 .account-item:last-child {
@@ -541,6 +538,10 @@ header {
     color: #333;
 }
 
+.account-number, .account-balance p, .account-balance h4, .account-details h4 {
+    color: var(--text-color);
+}
+
 /*============== Transfers detail ==============*/
 .transfer-detail {
     margin-bottom: 20px;
@@ -558,6 +559,11 @@ header {
     transition: width 0.4s ease;
     padding-top: 60px;
     z-index: 1000;
+}
+
+.side-nav.open {
+    width: 100vw;
+    /* Full viewport width */
 }
 
 .side-nav a {
@@ -589,44 +595,34 @@ header {
 
 /* Header Logout Button - hidden on small screens */
 #header-logout-btn {
-    display: block;
-    /* Default display */
+    display: flex;
 }
 
 .logout-btn:hover {
     background-color: #e30613;
-    /* Change to desired hover color */
 }
 
 @media (max-width: 768px) {
     #header-logout-btn {
         display: none;
-        /* Hide on small screens */
     }
 }
 
 /* Side Navigation styles */
 .sidenav {
     position: relative;
-    /* Establishes a positioning context for absolute positioning */
     display: flex;
     flex-direction: column;
     height: 100vh;
-    /* Full height for sidenav */
 }
 
 /* Side Navigation Logout Button - positioned at the bottom left */
 #sidenav-logout-btn {
     position: absolute;
-    /* Absolute positioning */
     bottom: 20px;
-    /* Adjust as necessary for spacing from bottom */
     left: 20px;
-    /* Adjust as necessary for spacing from left */
     margin: 0;
-    /* Reset margin */
     padding: 10px 20px;
-    /* Button padding */
 }
 
 /* Hamburger Menu Styling */
@@ -635,10 +631,11 @@ header {
     cursor: pointer;
     font-size: 30px;
     padding: 15px;
+    background-color: var(--background-color);
 }
 
 .hamburger-menu i {
-    color: var(--secondary-color);
+    color: var(--text-color);
 }
 
 /* Media query to show hamburger menu on small screens */
@@ -653,7 +650,7 @@ header {
 }
 
 body.nav-open {
-    padding-left: 250px;
+    width: 100vw;
 }
 
 /*============== Responsive design ==============*/
@@ -692,7 +689,6 @@ body.nav-open {
 }
 
 /*============== Login Page ==============*/
-/* CSS for stacking background images */
 .login-body body,
 .login-html html {
     height: 100%;
@@ -930,7 +926,7 @@ body.login-body {
 }
 
 .transaction-container .transactions {
-    background: white;
+    background: var(--container-color);
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -938,13 +934,14 @@ body.login-body {
 .transaction-container .transactions h2 {
     padding: 1.5rem;
     border-bottom: 1px solid #eee;
-    color: black;
+    color: var(--text-color);
 }
 
 .transaction-container .transaction-table {
     width: 100%;
     border-collapse: collapse;
     color: black;
+    table-layout: fixed;
 }
 
 .transaction-container .transaction-table th {
@@ -988,6 +985,24 @@ body.login-body {
     color: #ef6c00;
 }
 
+.transaction-container #transaction-table-body {
+    color: var(--text-color);
+}
+
+.trans-subheader th{
+    background-color: var(--header-background-color) !important;
+    border-bottom: 1px solid #ccc;
+    color: var(--text-color) !important;
+}
+
+@media (max-width: 768px) {
+
+    .transaction-table th:nth-child(4),
+    .transaction-table td:nth-child(4) {
+        display: none;
+    }
+}
+
 /*============== PayNow Page ==============*/
 .paynow-container {
     max-width: 1200px;
@@ -1022,7 +1037,7 @@ body.login-body {
 .paynow-container .form-section {
     margin: 10px 0;
     padding: 15px;
-    background-color: #f3f3f3;
+    background-color: var(--container-color);
     border-radius: 5px;
 }
 
@@ -1072,10 +1087,8 @@ body.login-body {
 /*============== Transfers Page ==============*/
 .transfers-container {
     max-width: 1200px;
-    /* Decrease max-width to center it more effectively */
     margin: 0px auto;
     padding: 0 1.5rem;
-    /* Adjust padding to reduce overall width */
 }
 
 .transfers-container .page-title {
@@ -1203,6 +1216,12 @@ body.login-body {
     color: #e32726;
 }
 
+@media (max-width: 768px) {
+    .transfers-container .quick-actions {
+        grid-template-columns: 1fr;
+    }
+}
+
 /*============== Voice Reco Chatbox [Feature] ==============*/
 .chatbot-toggle {
     position: fixed;
@@ -1292,8 +1311,11 @@ body.login-body {
     animation: none;
 }
 
-/* Ensure the pointer cursor appears for all clickable elements */
-button, a, .shortcut-item, .action-item, .header-icons button {
+button,
+a,
+.shortcut-item,
+.action-item,
+.header-icons button {
     cursor: pointer;
 }
 
@@ -1312,4 +1334,8 @@ footer {
 
 #next-button {
     margin-bottom: 60px;
+}
+
+.balance-card .balance-info #balanceAmount {
+    font-size: 40px;
 }
